--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "pydantic>=2.11.5",
+    "sqlmodel>=0.0.24",
 ]
