--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "deepseek>=1.0.0",
     "fastapi[standard]>=0.115.12",
     "pydantic>=2.11.5",
+    "python-dotenv>=1.1.0",
     "sqlmodel>=0.0.24",
 ]
